--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
                 <button class="success mt-2" type="submit">Add</button>
             </form>
             <div id="lecture-list">
-                <ul id="tasks-list"> </ul>
+                <ul id="tasks-list">
+                    <!-- <li>
+                        <div>
+                            <h6 class="title completed ">Complete assignment 1 (HTML / CSS) <span class="ml-2 badge badge-danger">High</span> </h6>
+                            <p class="description">Description of your task goes here </p>
+                        </div>
+                        <div>
+                            <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+                        </div>
+                    </li> -->
+                </ul>
             </div>
 
         </div>
